cabal-version:       3.12
name:                sandcastle
version:             1.0.0
synopsis:            Generate documentation from annotated Kanagawa source code.
author:              Adam Sapek, David Cox
maintainer:          adamsap@microsoft.com, coxdavid@microsoft.com
copyright:           (C) Microsoft
category:            Documentation
build-type:          Simple
license:             GPL-2.0-or-later
license-file:        LICENSE

executable sandcastle
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  build-depends:       base
                     , cmdargs        >= 0.10.10
                     , sandcastle
                     , text
  default-language:    Haskell2010

library
  hs-source-dirs:      lib
  exposed-modules:     Sandcastle
  other-modules:       Sandcastle.Cli
                       Sandcastle.Css
                       Sandcastle.DocGen
                       Sandcastle.Monad
                       Sandcastle.Tree
  ghc-options:         -Wall
  build-depends:       base                 >= 4.9 && < 5.0
                     , blaze-html           >= 0.9
                     , clay                 >= 0.15
                     , containers           >= 0.6
                     , directory            >= 1.3
                     , extra                >= 1.6
                     , filepath             >= 1.0
                     , filepattern          >= 0.1
                     , hashable             >= 1.3
                     , kanagawa             >= 1.0
                     , mtl                  >= 2.2
                     , pandoc               >= 3.0
                     , pandoc-types         >= 1.20
                     , prettyprinter        >= 1.7.1
                     , pretty-simple
                     , process              >= 1.6 && < 1.7
                     , unordered-containers >= 0.2.20
                     , text                 >= 0.11
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  build-depends:       base
                     , filepath
                     , sandcastle
                     , tasty           >= 1.2   && < 1.5
                     , tasty-golden    >= 2.3   && < 2.4
  default-language:    Haskell2010
